[package]
name = "nbd-server"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bitflags = "2"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "io-util", "net", "sync"] }
io = { git = "https://github.com/nbdd0121/r2vm.git", default-features = false, features = ["block-file"] }
